# kantv

./: .gitignore  AUTHORS  LICENSE  README-qnn.md  README.md  VERSION.txt  build-all.sh
.github/workflows/: build.yml
android/: .gitignore  build.gradle  common_library_config.gradle  config.gradle  constants.gradle  gradle.properties  publish.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/kantvplayer/: build.gradle
android/kantvplayer-exo2/: build.gradle  gradle.properties
android/kantvplayer-exo2/extensions/ffmpeg/: build.gradle
android/kantvplayer-exo2/src/main/: AndroidManifest.xml
android/kantvplayer-exo2/src/main/res/values/: strings.xml
android/kantvplayer-lib/: build.gradle
android/kantvplayer-lib/src/main/: AndroidManifest.xml
android/kantvplayer-lib/src/main/res/values/: strings.xml
android/kantvplayer/src/main/: AndroidManifest.xml
android/kantvplayer/src/main/assets/: config.json  ggml-hexagon.cfg  tv.xml
android/kantvplayer/src/main/assets/models/: ggml-hexagon.cfg
android/kantvplayer/src/main/res/layout/: activity_benchmark.xml  activity_block_manager.xml  activity_image_preview.xml  activity_splash.xml  content_grid_item.xml  content_grid_item_tv.xml  dialog_common_progerss.xml  fragment_agent.xml  fragment_agent_bk.xml  fragment_airesearch.xml  fragment_llm.xml  fragment_personal.xml  fragment_tvgrid.xml  item_feedback.xml  item_folder.xml  item_video.xml  layout_ijk_player_view_v2.xml  layout_top_bar_v2.xml  progress_bar.xml
android/kantvplayer/src/main/res/values/: arrays.xml  strings.xml  strings_pref.xml
android/kantvplayer/src/main/res/values-en/: strings_pref.xml
android/kantvplayer/src/main/res/values-zh/: strings.xml  strings_pref.xml
android/kantvplayer/src/main/res/xml/: settings_app.xml  settings_asr.xml  settings_llm.xml  settings_play.xml  settings_recording.xml
cdeosplayer/: constants.gradle
cdeosplayer/kantv/: build.gradle
cdeosplayer/kantv/src/main/: AndroidManifest.xml
cdeosplayer/kantv/src/main/assets/: config.json  ggml-hexagon.cfg  ggml-qnn.cfg  tv.xml
cdeosplayer/kantv/src/main/res/layout/: fragment_airesearch.xml  fragment_llm.xml
cdeosplayer/kantv/src/main/res/values/: arrays.xml  strings_pref.xml
cdeosplayer/kantv/src/main/res/values-zh/: strings_pref.xml
cdeosplayer/kantv/src/main/res/xml/: settings_app.xml  settings_play.xml
core/: .gitignore  CMakeLists.txt  build-android-jni-lib.sh
core/ggml/: CMakeLists.txt
core/ggml/jni/: bmp.c  ggml-jni-impl-external.cpp  ggml-jni-impl.cpp  ggml-jni.c  ggml-jni.h  llm-inference.cpp  ndkcamera.cpp  ndkcamera.h  realtime-video-recognition.cpp  sd-inference.cpp
core/ggml/llamacpp/: .gitignore
core/ggml/llamacpp/common/: build-info.cpp  common.cpp  log.cpp  log.h
core/ggml/llamacpp/examples/llava/: mtmd-cli.cpp  mtmd.cpp
core/ggml/llamacpp/ggml/include/: ggml-hexagon.h  ggml-qnn.h
core/ggml/llamacpp/ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-impl.h  ggml.c
core/ggml/llamacpp/ggml/src/ggml-cpu/: ggml-cpu.cpp
core/ggml/llamacpp/ggml/src/ggml-hexagon/: CMakeLists.txt  ggml-hexagon.cpp
core/ggml/llamacpp/ggml/src/ggml-hexagon/kernels/: Makefile  add.c  entry.c  ggml-dsp.c  ggml-dsp.h  mulmat.c  pool2d.c  rmsnorm.c  skel.c  skel.h  softmax.c  stub.c
core/ggml/llamacpp/ggml/src/ggml-qnn/: ggml-qnn-202404-src.txt  ggml-qnn.cpp
core/ggml/llamacpp/include/: llama.h
core/ggml/llamacpp/src/: llama-context.cpp  llama-impl.cpp  llama-impl.h  llama-model-loader.cpp  llama-model.cpp  llama-vocab.cpp  llama.cpp
core/ggml/llamacpp/tests/: .gitignore  CMakeLists.txt  README.txt  ggml-qnn-ut.cpp  ggml-qnn-ut.sh  test-backend-ops.cpp
core/ggml/llamacpp/tools/mtmd/: mtmd-cli.cpp
core/ggml/stablediffusioncpp/: common.hpp  esrgan.hpp  ggml_extend.hpp  model.cpp  stable-diffusion.cpp  stable-diffusion.h  util.cpp
core/ggml/whispercpp/: whisper.cpp
core/ncnn/: .gitignore
core/ncnn/ncnn-src/: build-libncnn-for-kantv.sh
core/ncnn/ncnn-src/include/: platform.h
docs/: FAQ.md  acknowledgement.md  build.md  compliance-statement.md  how-to-build.md  how-to-customize-tv-xml.md  how-to-customize.md  how-to-use-this-project-for-ai-expert.md  how-to-verify-ggml-qnn-backend-on-android.md
examples/ff_encode/: main.c
prebuilts/: README.md
prebuilts/Hexagon_SDK/6.2.0.1/incs/: HAP_compute_res.h  HAP_compute_res.md  HAP_dcvs.h  HAP_dcvs.md  HAP_debug.h  HAP_etm_config.h  HAP_etm_config.md  HAP_farf.h  HAP_farf.md  HAP_mem.h  HAP_mem.md  HAP_perf.h  HAP_perf.md  HAP_power.h  HAP_power.md  HAP_process.h  HAP_ps.h  HAP_ps.md  HAP_user_pmu.h  HAP_user_pmu.md  HAP_vtcm_mgr.h  HAP_vtcm_mgr.md  domain.h  domain_default.h  dspqueue.h  dspqueue.md  qtest_stdlib.h  remote.h  remote.md  remote64.h  stringl.h  stringl.md  synx.md  sysmon_cachelock.h  sysmon_cachelock.md  sysmon_marker.h  sysmon_marker.md  utils.h  verify.h  version.h  (+1 more)
prebuilts/Hexagon_SDK/6.2.0.1/incs/stddef/: AEEStd.md  AEEStdDef.h  AEEStdDef.idl  AEEStdErr.h  AEEStdErr.idl  AEEVaList.h
prebuilts/Hexagon_SDK/6.2.0.1/ipc/fastrpc/incs/: mmdefs.h
prebuilts/Hexagon_SDK/6.2.0.1/utils/examples/: dsp_capabilities_utils.h  mem_utils.h  os_defines.h  pd_status_notification.h  time_utils.h
prebuilts/QNN_SDK/2.34.0.250424/include/QNN/: QnnCommon.h  QnnContext.h  QnnInterface.h  QnnOpDef.h  QnnProperty.h  QnnSdkBuildId.h  QnnTypes.h
prebuilts/QNN_SDK/2.34.0.250424/include/QNN/HTP/: QnnHtpCommon.h  QnnHtpGraph.h  (+2 more)
prebuilts/include/QNN/: QnnCommon.h  QnnOpDef.h  QnnProperty.h  QnnSdkBuildId.h  QnnTypes.h
prebuilts/include/QNN/HTP/: QnnHtpCommon.h  QnnHtpGraph.h
prebuilts/include/QNN/HTP/core/: allocator.h  const_extent_descriptor.h  conversions.h  hvx_mathops.h  intrinsics.h  log.h  op_register_ext.h  template_help_tensor_ext.h  tile_extract.h
prebuilts/include/QNN/LPAI/: QnnLpaiCommon.h
prebuilts/include/QNN/System/: QnnSystemCommon.h  QnnSystemInterface.h
prebuilts/include/QNN/TFLiteDelegate/: QnnTFLiteDelegate.h
prebuilts/include/freetype/config/: ftoption.h
release/: README.md  VERSION.txt
tools/: check-dev-envs.sh
(+1527 files in other folders)
